<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.h2g2.dontpanic.activities.user.ProfileActivity">

    <RelativeLayout
        android:id="@+id/profileRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include android:id="@+id/includedAppBarTitle"
            layout="@layout/view_app_bar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/includedAppBarTitle"
            android:id="@+id/relativeLayout">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/title_profile" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/relativeLayout"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="71dp">

                <EditText
                    android:id="@+id/editProfileEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:hint="@string/prompt_email"
                    android:text="@string/prompt_email" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="71dp">

                <EditText
                    android:id="@+id/editProfilePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/prompt_password"
                    android:text="@string/prompt_password" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="71dp">

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="83dp"
                    android:text="@string/button_cancel" />

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/cancelButton"
                    android:layout_marginStart="40dp"
                    android:layout_toEndOf="@+id/cancelButton"
                    android:text="@string/button_save" />
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>

</layout>
